# imotex

./: STYLE_GUIDE.md
collections/: problems-solutions-around-the-world-1997-1998.tex
imo/1986/: q1.txt  q2.txt  q3.txt  q4.txt  q5.txt  q6.txt
imo/2006/: g1.txt  g10.txt  g2.txt  g3.txt  g4.txt  g5.txt  g6.txt  g7.txt  g8.txt  g9.txt
imo/2007/: g1.txt  g2.txt  g3.txt  g4.txt  g5.txt  g6.txt  g7.txt  g8.txt
imo/2008/: g1.txt  g2.txt  g3.txt  g4.txt  g5.txt  g6.txt  g7.txt
imo/2009/: g1.txt  g2.txt  g3.txt  g4.txt  g5.txt  g6.txt  g7.txt  g8.txt
imo/2010/: g1.txt  g2.txt  g3.txt  g4.txt  g5.txt  g6.txt  g6a.txt  g7.txt
imo/2011/: c3.txt  g1.txt  g2.txt  g3.txt  g4.txt  g5.txt  g6.txt  g7.txt  g8.txt
imo/2012/: g1.txt  g2.txt  g3.txt  g4.txt  g5.txt  g6.txt  g7.txt  g8.txt
imo/2013/: g1.txt  g2.txt  g3.txt  g4.txt  g5.txt  g6.txt
imo/2014/: g1.txt  g2.txt  g3.txt  g4.txt  g5.txt  g6.txt  g7.txt
imo/2015/: g1.txt  g2.txt  g3.txt  g4.txt  g5.txt  g6.txt  g7.txt  g8.txt
imo/2016/: g1.txt  g2.txt  g3.txt  g4.txt  g5.txt  g6.txt  g7.txt  g8.txt
imo/2017/: g1.txt  g2.txt  g3.txt  g4.txt  g5.txt  g6.txt  g7.txt  g8.txt
imo/2018/: g1.txt  g2.txt  g3.txt  g4.txt  g5.txt  g6.txt  g7.txt
imo/2019/: g1.txt  g2.txt  g3.txt  g4.txt  g5.txt  g6.txt  g7.txt  g8.txt
imo/2020/: q1.txt  q2.txt  q3.txt  q4.txt  q5.txt  q6.txt  s1-dshin.txt
ireland/: README.txt
ireland/1996/: imomath.py  p3.txt  p4.txt  p7.txt  p8.txt  q1.py  q1.txt  q2.txt  q3.txt  q4.txt  q7.txt  q8.txt  (+6 more)
src/latex_tokenizer/: Cargo.toml  README.md  latex_tokenizer.rs  tokenize_corpus.rs
(+9 files in other folders)
